--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,12 @@
 .currentColor {
   fill: currentColor;
 }
+ul {
+  list-style-type: disc;
+  margin-left: 30px;
+  /* Add any other necessary styles here */
+}
+ol {
+  list-style-type: decimal;
+  margin-left: 20px;
+}
