--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+  scroll-behavior: smooth;
+}
 .hideScroll {
   -ms-overflow-style: none;
   scrollbar-width: none;
