--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,8 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
+
+.ql-editor ol, .ql-editor ul {
+    padding-left: 0em !important;
+    margin-left: -7px !important;
+}
